k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learnhub
  labels:
    name: learnhub
    environment: production
